--- a/src/pages/main/Sec7_Gallery/mainGallery.css
+++ b/src/pages/main/Sec7_Gallery/mainGallery.css
@@ -83,5 +83,33 @@
     overflow: hidden;
 }
 
+@media screen and (max-width : 1280px) {
+    .mainGallery>h1{
+        font-size: 48px;
+    }
+    
+    .mainGallery>p{
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width : 1024px) {
+    .mainGallery>h1{
+        font-size: 32px;
+    }
+}
+
+@media screen and (max-width : 768px) {
+    .mainGallery>p{
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width : 300px) {
+    .mainGallery>.galleryBtn{
+        gap: 15px;
+    }
+}
+
 
 
