--- a/src/pages/subPages/faq/faq.css
+++ b/src/pages/subPages/faq/faq.css
@@ -31,6 +31,8 @@
     padding: 20px;
     min-height: 85px;
 }
+
+/* 좋아요 버튼 */
 .faqUpWrap{
     justify-content: center;
     padding-bottom: 10px;
@@ -49,14 +51,22 @@
     font-weight: bold;
     padding: 4px;
 }
-.faqPage{
+/* 페이지네이션 */
+.pagination {
+    display: flex;
+    justify-content: center;
+    gap: 28px;
     padding-top: 28px;
-}
+    font-size: 18px;
+  }
+
+/* 검색창 */
 .faqSearch{
     justify-content: center;
     align-items: center;
     padding-top: 28px;
 }
+
 
 @media screen and (max-width : 1440px) {
     .faqSec{
@@ -72,4 +82,7 @@
        font-size: 12px;
        padding-left: 5px;
     }
+    .pagination {
+        font-size: 16px;
+      }
 }
