--- a/src/reset.css
+++ b/src/reset.css
@@ -21,6 +21,9 @@ time, mark, audio, video {
     color: #1E1E23;
 	box-sizing: border-box;
 }
+a {
+	text-decoration: none;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
