--- a/src/pages/main/Sec7_Gallery/mainGallery.css
+++ b/src/pages/main/Sec7_Gallery/mainGallery.css
@@ -74,6 +74,8 @@
 
 .mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a{
     width: 100%; height: 100%;
+}
+
 .mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a>img{
     cursor: pointer;
     width: 100%; height: 100%;
