--- a/src/pages/main/Sec7_Gallery/mainGallery.css
+++ b/src/pages/main/Sec7_Gallery/mainGallery.css
@@ -55,7 +55,7 @@
     width: 100%; height: 100%;
     display: flex;
     transition-timing-function: linear;
-    transition-duration: 6000ms;
+    transition-duration: 5000ms;
     transform: translate3d(0, 0, 0);
     position: relative;
 }
@@ -76,9 +76,13 @@
     width: 100%; height: 100%;
 }
 
-.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a>img{
-    cursor: pointer;
+.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a>div{
     width: 100%; height: 100%;
+}
+
+.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a>div>img{
+    cursor: pointer;
+    width: 358px; height: 100%;
     border-radius: 10px;
     overflow: hidden;
 }
