--- a/src/components/twodep.css
+++ b/src/components/twodep.css
@@ -5,18 +5,18 @@
     gap: 28px;
     padding-bottom: 65px;
 }
-.twoDeptit{
-    display: inline-block;
-    background-color: var(--mirage);
+.twoDeptit a{
+    display: block;
+    background-color: var(--font-silber);
     width: 187px; line-height: 45px;
-    color: white;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
     cursor: pointer;
+    color: white;
 }
-.tcheck{
-    background-color: var(--font-silber);
+.tcheck.twoDeptit a{
+    background-color: var(--mirage);
 }
 
 @media screen and (max-width : 1440px) {
