--- a/src/reset.css
+++ b/src/reset.css
@@ -10,7 +10,7 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+figure, figcaption, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -46,6 +46,15 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+footer{
+	margin: 0;
+	border: 0;
+	font-size: 100%;
+    letter-spacing: -0.025em;
+    color: #1E1E23;
+	box-sizing: border-box;
 }
 
 *{
