--- a/src/components/twodep.css
+++ b/src/components/twodep.css
@@ -5,10 +5,13 @@
     gap: 28px;
     padding-bottom: 65px;
 }
+.twoDeptit{
+    background-color: var(--font-silber);
+    width: 187px; line-height: 45px;
+}
 .twoDeptit a{
     display: block;
     background-color: var(--font-silber);
-    width: 187px; line-height: 45px;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
@@ -31,6 +34,8 @@
     }
     .twoDeptit{
         width: 150px; line-height: 40px;
+    }
+    .twoDeptit a{
         font-size: 14px;
     }
 } 
