--- a/src/components/SubNoti/PostDetail.css
+++ b/src/components/SubNoti/PostDetail.css
@@ -56,7 +56,9 @@
 
 
 @media screen and (max-width : 1440px) {
-	
+	.postDetailWrap{
+		width: calc( 100% - 30px );
+	}
 }
 
 @media screen and (max-width : 1024px) {
@@ -64,7 +66,22 @@
 }
 
 @media screen and (max-width : 768px) {
-	
+	.postCategory{
+		font-size: 16px;
+	}
+	.postTitle{
+		font-size: 16px;
+		font-weight: bold;
+	}
+	.postInfo{
+		font-size: 14px;
+	}
+	.postContent {
+		padding: 20px 10px 430px 10px;
+	}
+	.postWrap{
+		padding-left: 10px;
+	}
 }
 
 @media screen and (max-width : 500px) {
