--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -107,6 +107,12 @@ header{
     flex-direction: column;
     align-items: center;
 }
+/* 로그인 아이콘 */
+.loginWrap{
+    background-color: white;
+    width: 30px; height: 30px;
+}
+
 
 @keyframes rollingOut {
     0% {transform: translate(-50%, -50%) scale(1) rotate(0deg);}
@@ -179,6 +185,9 @@ header{
     }
     .headNavi>.test3>.test31>.headMenuBtn{
         right: 28px;
+    }
+    .loginWrap{
+        width: 25px; height: 25px;
     }
 }
 
