--- a/src/pages/main/Sec1 3D/three.css
+++ b/src/pages/main/Sec1 3D/three.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    top: 80px;
+    top: 150px;
     overflow: hidden;
     white-space: nowrap;
     box-sizing: border-box;
@@ -11,7 +11,7 @@
     position: absolute;
     color: transparent;
     font-size: 700px;
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #fff;
     z-index: 10;
     display: inline-block;
@@ -20,10 +20,8 @@
 
 .threeDWrap{
     position: relative;
-}
-canvas{
-    width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
 
@@ -34,4 +32,16 @@ canvas{
       100% {
         transform: translate3d(-50%, 0, 0);
       }
+}
+
+@media screen and (max-width : 768px) {
+    .txtWrap{
+        top: 100px;
+    }
+   .txtWrap h2{
+    font-size: 300px;
+   }
+.threeDWrap{
+    height: 350px;
+}
 }
