예매하기 버튼수정

--- a/src/pages/subPages/fesInfo/subFesInfoCom.css
+++ b/src/pages/subPages/fesInfo/subFesInfoCom.css
@@ -223,10 +223,11 @@
     }
     .ticBtn{
         width: 120px;
-        line-height: 36px;
     }
     .ticBtn a{
         font-size: 16px;
+        width: 100%;
+        line-height: 36px;
     }
 }
 @media screen and (max-width : 500px) {
