--- a/src/pages/subPages/gallery/gallery.css
+++ b/src/pages/subPages/gallery/gallery.css
@@ -39,7 +39,7 @@
   justify-content: center;
   align-items: center;
   height: 570px;
-  transition: width 0.6s cubic-bezier(0.6, 0, 0.4, 1);
+  transition-timing-function: linear !important;
 }
 
 .mainSlide-active {
@@ -55,6 +55,18 @@
   height: 100%;
 }
 
+.swiper-slide.mainSlide.swiper-slide-active{
+  width: 80% !important;
+}
+
+.swiper-slide.mainSlide.swiper-slide-prev{
+  width: 10% !important;
+}
+
+.swiper-slide.mainSlide.swiper-slide-next{
+  width: 10% !important;
+}
+
 .mainSlide > div > img {
   position: absolute;
   top: 0;
@@ -64,7 +76,12 @@
   z-index: 1;
 }
 
-.gridBox {
+.subGal > .galImgSec2 {
+  width: 100%;
+  overflow: hidden;
+}
+
+.subGal > .galImgSec2 > .gridBox {
   width: 100%;
   height: 100%;
   display: grid;
@@ -80,18 +97,18 @@
   margin-bottom: 130px;
 }
 
-.gridBox > .gImgCard {
+.subGal > .galImgSec2 > .gridBox > .gImgCard {
   width: 100%;
   height: 100%;
   border: 1px solid #000;
 }
 
-.gridBox > .gImgCard > a{
+.subGal > .galImgSec2 > .gridBox > .gImgCard > a{
   display: inline-block;
   width: 100%; height: 100%;
 }
 
-.gridBox > .gImgCard > a > img {
+.subGal > .galImgSec2 > .gridBox > .gImgCard > a > img {
   width: 337px;
   height: 294px;
 }
