본일 작업물 커밋

--- a/src/pages/subPages/faq/faq.css
+++ b/src/pages/subPages/faq/faq.css
@@ -10,7 +10,7 @@
     display: block;
     border: 1px solid var(--font-black);
 }
-.faqWrap p{
+.faqWrap>.fans p{
     white-space: pre-wrap;
 }
 .fqes{
