--- a/src/components/SubNoti/PostDetail.css
+++ b/src/components/SubNoti/PostDetail.css
@@ -44,7 +44,9 @@
 .postContent {
     padding: 30px 15px 200px 15px;
 }
-
+.postContent img{
+	margin-bottom: 30px;
+}
 .postInfo {
     color: gray;
 }
@@ -60,6 +62,13 @@
 	}
 }
 
+@media screen and (max-width : 1024px) {
+	.postContent img{
+		width: 100%;
+	}
+}
+
+
 @media screen and (max-width : 768px) {
 	.postCategory{
 		font-size: 16px;
@@ -72,7 +81,7 @@
 		font-size: 14px;
 	}
 	.postContent {
-		padding: 20px 10px 430px 10px;
+		padding: 20px 10px 250px 10px;
 	}
 	.postWrap{
 		padding-left: 10px;
