--- a/src/pages/main/load.css
+++ b/src/pages/main/load.css
@@ -1,18 +1,19 @@
-.load{
-    width: 100%;
-    height: 100%;
+  
+  .mask {
     position: fixed;
     top: 0;
     left: 0;
-    display: block;
-    opacity: 0.8;
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: 9;
-}
-
-.load>img{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0);
+    z-index: 9999;
+    opacity: 0.5;
+    transition: 0.5s ease;
+  }
+  
+  .loadingImg {
     position: absolute;
-    top: 50%;
-    left: 35%;
-    z-index: 10;
-}
+    display: block;
+    top: 50vh;
+    left: 45%;
+  }
