--- a/src/pages/subPages/gallery/gallery.css
+++ b/src/pages/subPages/gallery/gallery.css
@@ -165,6 +165,12 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 1440px) {
+  .subGal{
+    width: calc(100% - 30px);
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .subGal > h1 {
     font-size: 48px;
