--- a/src/components/common/allMenuPage/allMenu.css
+++ b/src/components/common/allMenuPage/allMenu.css
@@ -1,12 +1,14 @@
 .headWrap {
-	background-color: #1E2F35;
+	background-color: var(--mirage);
 	position: fixed;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	padding: 110px 120px;
-	z-index: 10000;
+	z-index: 999;
   }
+
+ 
   
   .headWrap.visi {
 	display: flex;
@@ -64,10 +66,11 @@
   .slider .slide:nth-child(2) {
 	animation: fade 10s infinite 5s;
   }
-  .hiddenContents{
+  
+  .hiddenContents {
 	display: none;
   }
-
+  
   @keyframes fade {
 	0%, 10%, 90%, 100% {
 	  opacity: 0;
@@ -190,9 +193,9 @@
 	.headImg {
 	  display: none;
 	}
-	.hiddenContents{
-		display: block;
-	  }
+	.hiddenContents {
+	  display: block;
+	}
   }
   
   @media screen and (max-width : 768px) {
