--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -56,9 +56,9 @@ header{
 
 /* menu */
 
-.headNavi>.test3>.test31>.headMenuBtn{
+#headMenuBtn{
     position: fixed;
-    z-index: 10002;
+    z-index: 1000;
     right: 40px;
     width: 30px; height: 30px;
     display: flex;
@@ -68,7 +68,7 @@ header{
     border-radius: 50%;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap{
+#headMenuBtn>#dotWrap{
     cursor: pointer;
     width: 10px; height: 10px;
     position: absolute;
@@ -77,29 +77,29 @@ header{
     animation: rollingIn .6s .6s ease-out forwards;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap:hover{
+#headMenuBtn>#dotWrap:hover{
     animation: rollingOut .6s ease-out forwards;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap>.dot{
+#headMenuBtn>#dotWrap>#dot{
     width: 3px; height: 3px;
     background: var(--font-black);
     position: absolute;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap>.dot:nth-child(1){
+#headMenuBtn>#dotWrap>#dot:nth-child(1){
     left: 0; top: 0;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap>.dot:nth-child(2){
+#headMenuBtn>#dotWrap>#dot:nth-child(2){
     right: 0; top: 0;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap>.dot:nth-child(3){
+#headMenuBtn>#dotWrap>#dot:nth-child(3){
     left: 0; bottom: 0;
 }
 
-.headNavi>.test3>.test31>.headMenuBtn>.dotWrap>.dot:nth-child(4){
+#headMenuBtn>#dotWrap>#dot:nth-child(4){
     right: 0; bottom: 0;
 }
 
@@ -166,7 +166,7 @@ header{
     .headNavi>.headMenuWrap>.headMenu{
         gap: 28px;
     }
-    .headNavi>.test3>.test31>.headMenuBtn{
+    #headMenuBtn{
         width: 25px; height: 25px;
     }
     .headNavi>.test3>.test31 img{
@@ -175,7 +175,7 @@ header{
     .lang{
         width: 25px; height: 25px;
     }
-    .headNavi>.test3>.test31>.headMenuBtn{
+    #headMenuBtn{
         right: 35px;
     }
 }
@@ -187,7 +187,7 @@ header{
     .headNavi>.headMenuWrap{
         display: none;
     }
-    .headNavi>.test3>.test31>.headMenuBtn{
+    #headMenuBtn{
         right: 28px;
     }
     .loginWrap{
@@ -200,7 +200,7 @@ header{
         gap: 10px;
         margin-right: 30px;
     }
-    .headNavi>.test3>.test31>.headMenuBtn{
+    #headMenuBtn{
         right: 10px;
     }
 }
