--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -57,6 +57,7 @@ header{
 /* menu */
 
 #headMenuBtn{
+    cursor: pointer;
     position: fixed;
     z-index: 1000;
     right: 40px;
@@ -69,7 +70,6 @@ header{
 }
 
 #headMenuBtn>#dotWrap{
-    cursor: pointer;
     width: 10px; height: 10px;
     position: absolute;
     left: 50%; top: 50%;
@@ -77,7 +77,7 @@ header{
     animation: rollingIn .6s .6s ease-out forwards;
 }
 
-#headMenuBtn>#dotWrap:hover{
+#headMenuBtn:hover>#dotWrap{
     animation: rollingOut .6s ease-out forwards;
 }
 
