--- a/src/pages/main/Sec7_Gallery/mainGallery.css
+++ b/src/pages/main/Sec7_Gallery/mainGallery.css
@@ -1,126 +1,4 @@
-/* .mainGallery{
-    width: 100%;
-    background-color: var(--mirage);
-    padding: 110px 0;
-    text-align: center;
-}
-
-.mainGallery>h1{
-    font-size: 55px;
-    font-weight: bold;
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.mainGallery>p{
-    font-size: 18px;
-    color: #fff;
-}
-
-.mainGallery>.galleryBtn{
-    display: flex;
-    gap: 45px;
-    align-items: center;
-    justify-content: center;
-    margin: 45px 0 60px;
-}
-
-.mainGallery>.galleryslide>div{
-    overflow: hidden;
-}
-
-.mainGallery>.galleryslide>div>ul{
-    width: 100%; height: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.mainGallery>.galleryslide>div>ul>li{
-    width: 358px; height: 287px;
-    border-radius: 10px;
-    background-color: var(--mirage);
-    border: 1px solid var(--line-silver);
-}
-
-/* Swiper ver
-
-.mainGallery>.galleryslide>.swiper{
-    width: 100%; height: 100%;
-    position: relative;
-}
-
-.mainGallery>.galleryslide>.swiper>.swiper-wrapper{
-    width: 100%; height: 100%;
-    display: flex;
-    transition-timing-function: linear;
-    transition-duration: 5000ms;
-    transform: translate3d(0, 0, 0);
-    position: relative;
-}
-
-.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide{
-    margin-right: 0 !important;
-    transform: translate3d(0, 0, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: auto; height: 287px;
-    position: relative;
-    padding: 10px;
-    background-color: transparent;
-}
-
-.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a{
-    width: 100%; height: 100%;
-}
-
-.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a>div{
-    width: 100%; height: 100%;
-}
-
-.mainGallery>.galleryslide>.swiper>.swiper-wrapper>.swiper-slide>a>div>img{
-    cursor: pointer;
-    width: 358px; height: 100%;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-@media screen and (max-width : 1280px) {
-    .mainGallery>h1{
-        font-size: 48px;
-    }
-    
-    .mainGallery>p{
-        font-size: 16px;
-    }
-}
-
-@media screen and (max-width : 1024px) {
-    .mainGallery{
-        padding: 65px 0;
-    }
-    .mainGallery>h1{
-        font-size: 32px;
-    }
-}
-
-@media screen and (max-width : 768px) {
-    .mainGallery>p{
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width : 300px) {
-    .mainGallery>.galleryBtn{
-        gap: 15px;
-    }
-}
-
-
- */
-
- .mainGallery {
+.mainGallery {
   width: 100%;
   background-color: var(--mirage);
   padding: 110px 0;
@@ -147,11 +25,14 @@
   margin: 45px 0 60px;
 }
 
-.mainGallery>.galleryBtn>div>a{
-  font-size: 18px;
-  width: 160px; height: 50px;
+.mainGallery>.galleryBtn>.mainBtnSalomie>a{
   line-height: 50px;
   color: var(--salomie);
+}
+
+.mainGallery>.galleryBtn>.mainBtnSalomie:hover>a{
+  color: var(--mirage);
+  font-weight: bold;
 }
 
 .mainGallery > .galleryslide > div {
@@ -244,6 +125,9 @@
 @media screen and (max-width: 768px) {
   .mainGallery > p {
     font-size: 14px;
+  }
+  .mainGallery>.galleryBtn>.mainBtnSalomie>a{
+    line-height: 36px;
   }
 }
 
