--- a/src/components/SubNoti/CreatePost.css
+++ b/src/components/SubNoti/CreatePost.css
@@ -27,10 +27,19 @@
 	border: 1px solid var(--line-silver);
 	border-radius: 2px;
 	outline: none;
+	width: 125px;
+}
+.categorySelectTitle{
+	padding: 8px 40px 8px 8px;
+	margin-left: 10px;
+	border: 1px solid var(--line-silver);
+	border-radius: 2px;
+	outline: none;
+	width: 500px;
 }
 
 .textBox {
-	margin: 10px 0 28px 0;
+	margin: 10px 0 5px 0;
 	width: 100%;
 	height: 430px;
 	border: 1px solid var(--line-silver);
@@ -47,8 +56,8 @@
 		font-size: 14px;
 	}
 
-	.categorySelect {
-		width: calc(85% - 30px);
+	.categorySelect, .categorySelectTitle {
+		width: calc(75% - 30px);
 	}
 }
 
